# pigeon

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: _config.rs  config.rs  daemon.rs  history.rs  images.rs  lexer.rs  lib.rs  main.rs  memory.rs  notification.rs  sound.rs
src/cli/: config.rs  history.rs  mod.rs  notification.rs  profile.rs  serve.rs
src/config/: history.rs  mod.rs  placement.rs  profiles.rs  sound.rs  timeouts.rs
src/config/notification/: animation.rs  body.rs  border.rs  mod.rs  overrides.rs  placement.rs  position.rs  progress.rs  summary.rs  template.rs  text.rs  thumbnail.rs
src/config/profiles/: mod.rs  rules.rs
src/popup/: events.rs  handlers.rs  mod.rs  render.rs  surface.rs
src/popup/render/: card.rs  mod.rs  text.rs  thumbnail.rs
