[package]
name = "pigeond"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "ico", "jpeg", "png", "webp"] }
zbus = { version = "5", features = ["tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
smithay-client-toolkit = { version = "0.19", default-features = false, features = ["calloop"] }
cosmic-text = "0.19.0"
config = "0.15.24"
serde = "1.0.228"
notify = "8.2"
