[package]
name = "pigeon"
version = "0.1.1"
edition = "2024"
description = "a notification daemon"
repository = "https://github.com/lisk77/pigeon"
license = "GPL-3.0"
categories = ["command-line-utilities"]

[dependencies]
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "ico", "jpeg", "png", "webp"] }
zbus = { version = "5", features = ["tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
smithay-client-toolkit = { version = "0.19", default-features = false, features = ["calloop"] }
cosmic-text = "0.19.0"
config = "0.15.24"
serde = "1.0.228"
notify = "8.2"
clap = { version = "4.6.1", features = ["derive"] }
toml_edit = "0.25.12"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
